# AutoThrottle

./: AutoThrottle.sln  CMakeLists.txt  README.md  tbm9.perf  tbmPerf.xlsx
.github/workflows/: main.yml
AutoThrottle/: AutoThrottle.cpp  AutoThrottle.vcxproj  AutoThrottle.vcxproj.filters  AutoThrottlePlugin.cpp  AutoThrottlePlugin.h  Menu.cpp  MenuItem.cpp  MenuItem.h  PID.cpp  PID.h  Performance.cpp  Performance.h  Widget.cpp  Widget.h  WidgetRegistry.cpp  ap_core.cpp  ap_core.h  perf.cpp  perf.h  pid.cpp  pid.h  util.cpp  util.h
cmake/: add_FetchContent_MakeAvailable.cmake
include/AutoThrottle/: Menu.h  Performance.h  Widget.h  WidgetRegistry.h  util.h
include/AutoThrottle/Util/: geometry.h
include/AutoThrottle/Window/: CallbackWindow.h  Event.h  Label.h  Object.h  Window.h
include/AutoThrottle/Window/Util/: FontUtil.h
resources/: tbm9.perf  tbmPerf.xlsx
src/: AutoThrottle.cpp  AutoThrottlePlugin.cpp  CMakeLists.txt  Menu.cpp  MenuItem.cpp  PID.cpp  Performance.cpp  Widget.cpp  WidgetRegistry.cpp  util.cpp
src/Util/: geometry.cpp  util.cpp
src/Window/: CallbackWindow.cpp  Event.cpp  Label.cpp  Object.cpp  Window.cpp
src/Window/Util/: FontUtil.cpp
